2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : add singleton instance context test
	  (but disabled, for some weird conflict).

2009-06-25  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : add some instance provider tests.

2009-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : make sure that the port to be in use is
	  available before running the tests. Check attach state.
	* DispatchRuntimeTest.cs : make sure that it runs through all the
	  behavior tests.

2009-06-16  Atsushi Enomoto  <atsushi@ximian.com>

	* DispatchRuntimeTest.cs : add reasonable timeout and close client
	  appropriately. Objects are disposed in different ways than .NET.
	  Do not expect things automatically disposed as just time goes by.

2009-06-12  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : make sure to close service host,
	  within rational TimeSpan.

2009-06-09  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : add ServiceThrottle test, and comments.

2009-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : make sure ctor args are nullable.

2009-04-27  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs : added a couple of EndpointDispatcher
	  state tests.

2009-02-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherTest.cs:
	  Ignore all failing-under-dotnet tests

2009-01-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DispatchRuntimeTest.cs : disable failing test.

2008-05-22  Roei Erez  <roeie@mainsoft.com>
	* fix ContractDescription.GetContract implementation
	* Refactor Request processing
	* Add support for message inspectors
	* Add support for InstanceContextProvider & InstanceProvider, including lifecycles events
	like: ReleaseServiceInstance, Open, Close...
	* Add relevant test cases.

2008-04-08  Roei Erez <roeie@mainsoft.com>
	* Add tests ChannelDispatcherTest, EndpointDispatcherTest
