@@ -1,3 +1,8 @@
+2009-09-11  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ChannelDispatcherTest.cs : refine AcceptChannel invocation check
+	  and make it not to fail on .NET.
+
 2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ChannelDispatcherTest.cs : add singleton instance context test
